--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -8,3 +8,16 @@
         margin: 0;
     }
 }
+.search {
+    padding: 0 20px;
+}
+
+.search input {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #ddd;
+    text-transform: capitalize;
+}
+.search input:focus{
+    outline: 1px solid #009E00;
+}
